vm-based/ubuntu-desktop-lite.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-desktop-lite-rdp
spec:
  selector:
    kubevirt.io/domain: ubuntu-desktop-lite
  ports:
  - name: rdp
    port: 3389
    targetPort: 3389
    protocol : TCP
  type: ClusterIP
