vm-based/guac-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-guac
  namespace: guac
spec:
  tls:
    - hosts:
        - dshkubetest.uksouth.cloudapp.azure.com
      secretName: guac-tls
  rules:
  - host: dshkubetest.uksouth.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole-guacamole
            port:
              number: 80
  ingressClassName: nginx
