vm-based/allowrdp.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-rdp
  namespace: default
spec:
  podSelector:
    matchLabels:
      vm-rdp: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: guac
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: guacamole
      ports:
        - port: 3389
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              vm-rdp: "true"
      ports:
        - port: 3389
          protocol: TCP
