vm-based/allowrdpfromguac.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-rdp
  namespace: guac
spec:
  podSelector:
    matchLabels:
      kubernetes.io/metadata.name: guac
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              vm-rdp: "true"
